# wasm2sh

./: .gitignore  Cargo.toml  README.md
crates/wasm2sh/: Cargo.toml
crates/wasm2sh/src/: compiler.rs  lib.rs
